--- a/public/locales/zh/translation.json
+++ b/public/locales/zh/translation.json
@@ -105,7 +105,7 @@
   },
   "contacts": {
     "title": "聯絡我",
-    "subtitle": "對於我的作品有興趣嗎？歡迎隨時與我聯繫",
+    "subtitle": "對於我的作品有興趣嗎？\n歡迎隨時與我聯繫！",
     "contactIcons": [
       {
         "text": "Linkedin",
