--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -105,7 +105,7 @@
   },
   "contacts": {
     "title": "連絡先",
-    "subtitle": "私の作品に興味があります？お気軽にご連絡ください。",
+    "subtitle": "私の作品に興味があります？\nお気軽にご連絡ください。",
     "contactIcons": [
       {
         "text": "Linkedin",
