--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -26,7 +26,7 @@
       },
       {
         "imgSrc": "assets/about-div-img3.png",
-        "titleText": "語学能力",
+        "titleText": "語学スキル",
         "contentText": "英語 / 中国語 / 日本語\nビジネスレベル以上\n多言語 UI 制作"
       }
     ]
