Add and implement IconAnime
modified:   public/locales/en/translation.json
modified:   public/locales/ja/translation.json
modified:   public/locales/zh/translation.json
modified:   src/mainData.model.ts
- New prop iconAnimeName in ItemAbout

new file:   src/components/IconAnime.tsx
- New type AnimeName
    Naming convention: section-name_icon-name
- Load lottie files by AnimeName
- For now only section about is using anime icons, so set class name
  to icon--about, will make this dynamic in the future

modified:   src/components/IconWithContainer.tsx
- New optional prop iconAnimeName
- Return IconAnime if iconAnimeName is provided, otherwise nornal Icon

modified:   src/components/ItemAbout.tsx
modified:   src/components/SectionAbout.tsx
- Passing iconAnimeName from
  SectionAbout -> ItemAbout -> IconWithContainer

modified:   src/index.css
- Mod the related styles for new anime icons

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,16 +15,19 @@
     "subtitle": "A Self-taught Full-Stack\u00a0Developer",
     "aboutItems": [
       {
+        "iconAnimeName": "about_front-end",
         "imgSrc": "assets/about-div-img1.png",
         "titleText": "Front-end",
         "contentText": "ReactJS Web / Mobile App\nHTML / CSS / JavaScript\nAdobe Ps / Ai / Xd"
       },
       {
+        "iconAnimeName": "about_back-end",
         "imgSrc": "assets/about-div-img2.png",
         "titleText": "Back-end",
         "contentText": "RESTful API development\nCloud sever deployment\nNodeJS, mongoDB"
       },
       {
+        "iconAnimeName": "about_language",
         "imgSrc": "assets/about-div-img3.png",
         "titleText": "Languages",
         "contentText": "English / Chinese / Japanese\nBusiness level language skills\nMulti-language UI"
