Implement animation in SectionProject
modified:   public/locales/en/translation.json
modified:   public/locales/ja/translation.json
modified:   public/locales/zh/translation.json
- Remove 3rd ItemProject

new file:   src/assets/animations/project_poyao-dot-wang.json
new file:   src/assets/animations/project_tabatimer.json
- Add 2 lottie animation files

modified:   src/components/ItemProject.tsx
- Set ID for main div, by index number passed form SectionProjects
- Apply "item-project--reverse" class to main div if the porp reversed
  passed from SectionProjects is true

modified:   src/components/SectionProjects.tsx
- New fn createLottieAnime
  + Get element by id of the lottie anime element
  + onComplete, play the loop section
- New fn createTimeLine
  + Animation timeline for ItemProject pop up
  + Get element by id of ItemProject
  + If reversed, set x from the opposite direction(right side)
- New fn createScrollTrigger
  + Trigger for the popup animation of ItemProject and lottie anime
  + The segment of the pop up lottie anime is 0~1 sec (0~25 frame)
- New fn createScrollTriggerPin
  + Trigger for ItemProject pin, and lottie anime main segment
  + The lottie anime main segment is 2~6 sec (25~150 frame)
- useEffect() once to create all animes and triggers
- Return ItemProjects separately instead of mapping from array

modified:   src/index.css
- Mod related styles

modified:   src/mainData.model.ts
- Add "project_poyao-dot-wang" to AnimeName

modified:   src/utils/animeFns.ts
- Add "project_poyao-dot-wang" to loadAnimationData fn

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -81,6 +81,7 @@
     "subtitle": "Feel free to browse my works on\u00a0GitHub",
     "projectItems": [
       {
+        "iconAnimeName": "project_tabatimer",
         "imgSrc": "assets/project1.png",
         "title": "TabaTimer",
         "text": "A simple workout timer\niOS / Android app",
@@ -88,17 +89,11 @@
         "btnText": "Learn More"
       },
       {
+        "iconAnimeName": "project_poyao-dot-wang",
         "imgSrc": "assets/project2.png",
         "title": "Poyao.Wang",
         "text": "This React webpage app\nDeployed on Firebase.",
         "btnLink": "https://github.com/poyao-wang/my-web-app",
-        "btnText": "Learn More"
-      },
-      {
-        "imgSrc": "assets/project3.png",
-        "title": "Motor Controller",
-        "text": "Raspberry Pi motor controller\nCoded in Python.",
-        "btnLink": "https://github.com/BoyoWang/control-box",
         "btnText": "Learn More"
       }
     ]
