--- a/public/locales/ja/translation.json
+++ b/public/locales/ja/translation.json
@@ -81,6 +81,7 @@
     "subtitle": "GitHubで作品を自由に閲覧してください",
     "projectItems": [
       {
+        "iconAnimeName": "project_tabatimer",
         "imgSrc": "assets/project1.png",
         "title": "TabaTimer",
         "text": "トレーニング用タイマー\niOS / Android アプリ",
@@ -88,17 +89,11 @@
         "btnText": "詳 細"
       },
       {
+        "iconAnimeName": "project_poyao-dot-wang",
         "imgSrc": "assets/project2.png",
         "title": "Poyao.Wang",
         "text": "この React Web アプリ\nFirebase に展開",
         "btnLink": "https://github.com/poyao-wang/my-web-app",
-        "btnText": "詳 細"
-      },
-      {
-        "imgSrc": "assets/project3.png",
-        "title": "モーター制御",
-        "text": "Raspberry Pi コントローラー\nPython でコーディング",
-        "btnLink": "https://github.com/BoyoWang/control-box",
         "btnText": "詳 細"
       }
     ]
